tests/baselines/reference/privacyCheckAnonymousFunctionParameter2.errors.txt
privacyCheckAnonymousFunctionParameter2.ts(12,13): error TS2345: Argument of type 'null' is not assignable to parameter of type '(a: Iterator<unknown>) => number'.


==== privacyCheckAnonymousFunctionParameter2.ts (1 errors) ====
    export var x = 1;  // Makes this an external module 
    interface Iterator<T> { x: T }
    
    module Q {
        export function foo<T>(x: (a: Iterator<T>) => number) {
            return x;
        }
    }
    
    module Q {
        function bar() {
            foo(null);
                ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type '(a: Iterator<unknown>) => number'.
        }
    }